--- a/weapp/templates/apps_base.html
+++ b/weapp/templates/apps_base.html
@@ -176,7 +176,13 @@
     <body style="background:#f2f2f2; position:relative;">
         <div class="wui-loading wui-loading-animation wa-loading"></div>
 
+        <div data-ui-role="swipemask" class="mask"></div>
+
         {% block content-panel %}{% endblock %}
+
+        <div class="xui-errMsg xa-errMsg none">
+            <div style="position: fixed;top: 38%;width: 100%;text-align: center;z-index: 10000;"><p style="color: #ffffff"></p></div>
+        </div>
 
         {% include "weapp_jssdk_base.html" %}
 
@@ -226,13 +232,6 @@
                     $prizeContainer = $prizeContainer.eq(0);
                     participanceData['prize'] = $prizeContainer.attr('data-prize');
                 }
-                var $textSelection = $('.wui-textSelection');
-                if ($textSelection.length > 0){
-                    participanceData['actionButtons'] = JSON.stringify([{
-                        'text': '查看结果',
-                        'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id='+W.member_id+'&isMember='+W.isMember
-                    }]);
-                }
                 $('body').alert({
                     isShow: true,
                     info: '玩命传输中请等待...',
@@ -276,6 +275,21 @@
                 }else{
                     $loading.css('opacity', 0);
                 }
+            }
+
+            //透明遮罩
+            function mask(action){
+                if('show' == action){
+                    $('.mask').swipeMask('show');
+                }else if('hide' == action){
+                    $('.mask').swipeMask('hide');
+                }
+            }
+
+            function wuiAlert(msg){
+                $('.xa-errMsg').find('p').html(msg);
+                mask('show');
+                $('.xui-errMsg').removeClass('none');
             }
         </script>
 
