--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -67,8 +67,8 @@
         position: absolute;
         height: 100%;
         display: inline-block;
-        width: 50%;
-        right: -10px;
+        width: 52%;
+        left: 49%
     }
     .xui-list-content .wui-text{
         display: -webkit-box;
@@ -76,7 +76,6 @@
         font-size: 14px;
         word-break: break-all;
         margin-top: 15px;
-        padding-left: 10px;
     }
     .xui-list-content .xui-progress-list{
         position:absolute;
@@ -86,11 +85,17 @@
         bottom: 20px;
     }
     .xui-progressBar{
-            position: absolute;
-            background: #1BA3F9;
-            vertical-align: middle;
-            height: 20px;
-        }
+        position: absolute;
+        background: #1BA3F9;
+        vertical-align: middle;
+        height: 20px;
+    }
+    .wui-selectBox-display-list .wui-inner-selectionwithimage-list {
+        width: 45%;
+        display: inline-block;
+        float: left;
+        margin-right: 10px;
+    }
     </style>
 
 {% endblock %}
@@ -158,7 +163,7 @@
                                         data-input-type="imageselection"
                                         data-control-type="appkit.imageselection"
                                     >
-                                        <div class="wui-inner-selectionwithimage {% if select.isSelect %}wui-image-selected{% endif %}">
+                                        <div class="wui-inner-selectionwithimage-list {% if select.isSelect %}wui-image-selected{% endif %}">
                                             <div class="wui-inner-img">
                                             <img src="{% if select.image %}{{ select.image }}{% else %}/static_v2/img/termite2/addImgBtn.png{% endif %}" class="wui-i-image">
                                             </div>
