修正bdd消息排序问题。

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -247,6 +247,7 @@ textarea{resize:none}
 .pt40{padding-top:40px !important;}
 .pt50{padding-top:50px !important;}
 .pt60{padding-top:60px !important;}
+.pt80{padding-top:80px !important;}
 .pt100{padding-top:100px !important;}
 .pt110{padding-top:110px !important;}
 .pb0{padding-bottom:0px !important;}
