--- a/weapp/templates/apps_base.html
+++ b/weapp/templates/apps_base.html
@@ -15,10 +15,9 @@
             {
                 "task": "weizoom-merge",
                 "args": {
-                    "dest":"cdn/standard_static/css/apps_static_all.css",
+                    "dest":"cdn/standard_static/css/apps_base_all.css",
                     "path_map": {
-                        "termite_static": "termite/static",
-                        "webapp_static": "webapp/modules/static"
+                        "termite_static": "termite/static"
                     }
                 }
             }
@@ -140,7 +139,7 @@
             {
                 "task": "weizoom-merge",
                 "args": {
-                    "dest":"cdn/standard_static/js/apps_static_all.js",
+                    "dest":"cdn/standard_static/js/apps_base_all.js",
                     "path_map": {
                         "termite_static": "termite/static"
                     }
