--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -41,11 +41,13 @@
     .wa-progress-msg{
         /* display: block; */
         position: absolute;
-        margin-top: -19px;
-        margin-left: 10%;
-        font-size: 0.8rem;
+        /* margin-top: -19px; */
+        /* margin-left: 10%; */
         height: 20px;
         line-height: 20px;
+        width: 100%;
+        text-align: center;
+        color: #666;
     }
     .wui-selectBox-display-list label{
         position: absolute;
@@ -150,7 +152,7 @@
                                         </div>
                                         <div style="background-color: #eee;position: relative;width: 100%;height: 20px">
                                             <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
-                                            <span style="position: absolute;margin-left: 26%;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
+                                            <span style="position: absolute;width: 100%;text-align: center;color: #666;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                         </div>
                                     </div>
                                 </li>
@@ -171,8 +173,8 @@
                                             <span class="wui-text">{{ select.name }}</span>
                                             <div class="xui-progress-list">
                                                 <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
+                                                <span class="wa-progress-msg">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                             </div>
-                                            <span class="wa-progress-msg" style="margin-left: 26%;bottom: 10px;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                         </div>
                                     </div>
                                 </li>
