--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -39,17 +39,11 @@
         height: 20px;
     }
     .wa-progress-msg{
-        /* display: block; */
         position: absolute;
-        /* margin-top: -19px; */
-        /* margin-left: 10%; */
-        /*height: 20px;*/
-        /*line-height: 20px;*/
+        line-height: 20px;
         width: 100%;
         text-align: center;
         color: #666;
-        bottom: 0;
-        border: 1px solid red;
     }
     .wui-selectBox-display-list label{
         position: absolute;
@@ -64,9 +58,6 @@
     .wui-selectBox-display-table .wui-inner-selectionwithimage{
         margin-bottom: 8px;
     }
-    /*.wui-imageSelection{
-        padding: 0;
-    }*/
     .xui-list-content{
         top: 0;
         position: absolute;
@@ -154,7 +145,7 @@
                                         </div>
                                         <div style="background-color: #eee;position: relative;width: 100%;height: 20px">
                                             <span class="xui-progressBar" style="width: {% ifequal select.percent '0%' %}0{% else %}{{ select.percent }}{% endifequal %}"></span>
-                                            <span style="position: absolute;width: 100%;text-align: center;color: #666;bottom: 0;border: 1px solid red;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
+                                            <span style="position: absolute;width: 100%;text-align: center;color: #666;line-height: 20px;">{{ select.counter }}票&nbsp;&nbsp;{{ select.percent }}</span>
                                         </div>
                                     </div>
                                 </li>
