settings中加入H5_DOMAIN，以便在weapp中能跳转到正确的h5地址

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -190,7 +190,7 @@
 
                         var pos = oldHref.indexOf('?');
                         var qs = oldHref.substring(pos, oldHref.length);
-                        var newHref = 'http://h5.weapp.com/mall/weapp_resource/'+qs;
+                        var newHref = '{{''|get_h5_domain}}/mall/weapp_resource/'+qs;
                         $link.attr('href', newHref);
                     })
                 }
