--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -190,8 +190,12 @@
 
                         var pos = oldHref.indexOf('?');
                         var qs = oldHref.substring(pos, oldHref.length);
-                        var newHref = 'http://h5.weapp.com/mall/weapp_resource/'+qs;
-                        $link.attr('href', newHref);
+                        var newHref = '{{h5_host}}/mall/weapp_resource/'+qs;
+                        if ($link.attr('data-link')) {
+                            $link.attr('data-link', newHref);
+                        } else {
+                            $link.attr('href', newHref);
+                        }
                     })
                 }
                 $('body').css('visibility', 'visible');
@@ -286,6 +290,7 @@
                     if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
                         window.location.href = url;
                     }else{
+                        alert(url);
                         window.location.href = "http://"+ window.location.host + url;
                     }
                 }
