修改底部导航，点击‘我的’跳转回h5¼

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -192,6 +192,9 @@
                         var qs = oldHref.substring(pos, oldHref.length);
                         var newHref = '{{h5_host}}/mall/weapp_resource/'+qs;
                         $link.attr('href', newHref);
+                        if ($link.attr('data-link')) {
+                            $link.attr('data-link', newHref);
+                        };
                     })
                 }
                 $('body').css('visibility', 'visible');
@@ -286,6 +289,7 @@
                     if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
                         window.location.href = url;
                     }else{
+                        alert(url);
                         window.location.href = "http://"+ window.location.host + url;
                     }
                 }
