--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -130,6 +130,12 @@
     .wui-win-font-color{
         color: orangered;
     }
+    .wa-power-btn-action{
+        max-width: 18%;
+    }
+    .wa-mobile_solution{
+        max-width: 61%;
+    }
 </style>
 {% endblock %}
 
