--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -461,6 +461,7 @@
         $('.xa-attention-member').removeClass('none');
     }
     function powerYou(){
+        console.log('up clicked');
         if (is_powered) {
             return
         }
