--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -265,10 +265,6 @@
                     $powerBtn.find('.wa-power-btn-action').html('帮');
                     $powerBtn.on('click', function(){
                         powerYou();
-                        $attention.find('.xa-attention-tip').show();
-                        $attention.find('img').attr('src', new_qrcode_url);
-                        $attention.find('.xa-attention-reply').children().first().html("3.回复：");
-                        openGuestMask();
                     }).show();
                 }
             }
@@ -488,6 +484,11 @@
                 if (W.isMember) {
                     $('.wa-power').find('.wa-power-btn-action').html('已帮');
                     openSuccessWin();
+                }else{
+                    $attention.find('.xa-attention-tip').show();
+                    $attention.find('img').attr('src', new_qrcode_url);
+                    $attention.find('.xa-attention-reply').children().first().html("3.回复：");
+                    openGuestMask();
                 }
                 is_powered = true;
             },
