--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -136,6 +136,19 @@
     .wa-mobile_solution{
         max-width: 43%;
     }
+    .wui-i-btn-power span{
+        display: inline-block;
+        position: relative;
+        max-width: 41%;
+        /* height: 20px; */
+        /* line-height: 20px; */
+        text-overflow: ellipsis;
+        /*border: 1px solid #999;*/
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
 </style>
 {% endblock %}
 
