--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -31,7 +31,7 @@
             <div class="wui-i-btngroup">
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-power wa-power"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>助力</span></button>
+                <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>助力</span></button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
             <div class="wui-i-description xa-description cl">
